<resources>
    <string name="app_name">Handiwalk</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="overview">Overview</string>
    <string name="favourite">Favourite</string>
    <string name="log_out">Log Out</string>
    <string name="NoRating">No one rated yet.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tutorial">Tutorial</string>
    <string name="main">Main</string>
    <string name="user_reviews">User Reviews :</string>
    <string name="favourite_location">Favourite Location</string>
    <string name="show_on_map">Show on map</string>
    <string name="unfav">UnFav</string>
    <string name="fav">Fav</string>
    <string name="rate">Rate</string>
</resources>