<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/anime_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e4e4e4">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->

                <TextView
                    android:id="@+id/locationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="?colorOnSecondary"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <TextView
                    android:id="@+id/ratingScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"

                    android:textAppearance="?attr/textAppearanceHeadline5"
                    android:textColor="?colorOnSecondary" />

                <TextView
                    android:id="@+id/favName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favourite_location"
                    android:textColor="@color/black"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <TextView
                    android:id="@+id/desciption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"

                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?colorOnSecondary" />

            </LinearLayout>


            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/showOnMap"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?colorOnSecondary"
                    android:text="@string/show_on_map" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favButton"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?colorOnSecondary"
                    android:text="@string/unfav" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/rateButton"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="?colorOnSecondary"
                    android:text="@string/rate" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>